--- a/page05.html
+++ b/page05.html
@@ -13,10 +13,10 @@
     <h1>Vídeos</h1>
     
 <div id="page05img">
-    <a href="https://youtu.be/j3VasfD8FdA" target="_blank"><img src="images/page02img/videosacolhida_p.png" width="300" alt="Acolhida"></a>
-    <a href="https://youtu.be/68rB5-vLcv4" target="_blank"><img src="images/page02img/veideopop-p.png" width="300" alt="centro pop"></a>
-    <a href="https://youtu.be/mDZfZsjNU7A" target="_blank"><img src="images/page02img/videoscras_p.png"width="300"alt="cras"></a>
-    <a href="https://youtu.be/4oOQx751K5A" target="_blank"> <img src="images/page02img/videoscreas_p.png"width="300"alt="Laranja"></a>
+    <a href="https://www.youtube.com/watch?v=TBmPwMsWCa4" target="_blank"><img src="images/page02img/videosacolhida_p.png" width="300" alt="Rafex"></a>
+    <a href="https://www.youtube.com/watch?v=TBmPwMsWCa4" target="_blank"><img src="images/page02img/veideopop-p.png" width="300" alt="Pipoca"></a>
+    <a href="https://www.youtube.com/watch?v=TBmPwMsWCa4" target="_blank"><img src="images/page02img/videoscras_p.png"width="300"alt="Musica"></a>
+    <a href="https://www.youtube.com/watch?v=TBmPwMsWCa4" target="_blank"> <img src="images/page02img/videoscreas_p.png"width="300"alt="Perfect"></a>
 
 
 </div>
