--- a/page04.html
+++ b/page04.html
@@ -13,7 +13,7 @@
     <h1>Calendário</h1>
 
     <div class="Calendário">
-        <p>Segunda-feira</p>
+        <p>Exibir Calendário</p>
         <p id="testeimg">
             <img id="calendarimg" src="images/calendario_2023.jpg">
         </p>
