--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <div class="row"></div>
 <div id="email"  class="column">
-    <abbr title="rafex.pipoca@gmail.com"><img src="contatos/mail2.png" style="width: 100%;" alt="E-mail"></abbr>
+    <abbr title="rafex.sensei@gmail.com"><img src="contatos/mail2.png" style="width: 100%;" alt="E-mail"></abbr>
 </div>
 <div class="column">
     <a href="https://www.youtube.com/channel/UCi0i2AGpfvX-_Wd3xR0LpLg" target="_blank"><img src="contatos/YTContat.png"  style="width: 100%;" alt="YouTube"></a>
