--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             </div>
          <div id="titu"> 
              <destitu><strong>
-                CONJUNTO HABITACIONAL PARQUE DOURADO II</destitu></strong>
+                RAFEX SENSEI</destitu></strong>
          </div>
 
         <div id="sbmim">
             
-                <p><strong><espcsob id="sobret">Sobre a escola</espcsob></strong></p>
+                <p><strong><espcsob id="sobret">Sobre mim</espcsob></strong></p>
             </div>
 
             
