--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
         <div id="imaga">
-            <img src="images/EE dourado perf 300.png" alt="escola dourado 2">
+            <img id="rfximage" src="images/rfximage.png" alt="escola dourado 2">
             
             </div>
          <div id="titu"> 
