--- a/page04.html
+++ b/page04.html
@@ -33,6 +33,7 @@
         <ul type='circle' >
            <li>Fulano</li>
            <li>Ciclanos</li>
+           <li>BELTRANOS</li>
    
         </ul>
    <br>
